@@ -1,3 +1,7 @@
+- Convert newlines to spaces when grabbing the selection. If we think that
+  the selection is a URL (it starts with http: etc.), then we remove
+  spaces as well.
+
 * lookuplet-1.1 (2001-08-17)
 
 - Fixed support for running as an applet and made the code automatically
